--- a/src/js/i18n/locales/ge.json
+++ b/src/js/i18n/locales/ge.json
@@ -468,6 +468,19 @@
     "cookie_notice": "შესვლით თქვენ ეთანხმებით ჩვენ მიერ cookie-ების გამოყენებას თქვენი სააცოცვლო პროგრესის თვალყურის დევნისთვის.",
     "enter_name_error": "გთხოვთ შეიყვანოთ თქვენი სახელი და გვარი."
   },
+  "attribute_radar": {
+    "title": "ცოცვის სტილის პროფილი",
+    "ticked": "შესრულებული",
+    "unticked": "შეუსრულებელი"
+  },
+  "gym_info": {
+    "street_address": "ქუჩის მისამართი",
+    "zip": "საფოსტო კოდი",
+    "website": "ვებგვერდი",
+    "phone": "ტელეფონი",
+    "opening_hours": "სამუშაო საათები",
+    "description": "აღწერა"
+  },
   "btn_all_routes": "ყველა ტრასა",
   "btn_new_routes": "ახალი ტრასები",
   "btn_expiring_routes": "ვადაგასული ტრასები",
