--- a/src/js/i18n/locales/fr.json
+++ b/src/js/i18n/locales/fr.json
@@ -24,7 +24,10 @@
     "refresh": "actualiser",
     "description": "Le classement est base sur les 10 problemes les plus difficiles. Les Flash donnent plus de points, les essais en retirent.",
     "country_hint": "Si vous ne voyez pas votre classement dans la liste de votre pays, allez dans les parametres, definissez le pays et grimpez quelques problemes.",
-    "global": "Global"
+    "global": "Global",
+    "all_tab": "Tous",
+    "boulder_tab": "Boulder",
+    "sport_tab": "Sport"
   },
   "results": {
     "name": "Nom",
