--- a/src/js/i18n/locales/ge.json
+++ b/src/js/i18n/locales/ge.json
@@ -24,7 +24,10 @@
     "refresh": "განახლება",
     "description": "რეიტინგი ეფუძნება 10 ყველაზე რთულ პრობლემას. Flash-ები იძლევა მეტ ქულებს, ცდები ამცირებს.",
     "country_hint": "თუ თქვენი ქვეყნის სიაში ვერ ხედავთ თქვენს რეიტინგს, გადადით პარამეტრებში, მიუთითეთ ქვეყანა და ასვით რამდენიმე პრობლემა.",
-    "global": "გლობალური"
+    "global": "გლობალური",
+    "all_tab": "ყველა",
+    "boulder_tab": "ბოულდერი",
+    "sport_tab": "სპორტი"
   },
   "results": {
     "name": "სახელი",
